--- a/tasks/CMakeLists.txt
+++ b/tasks/CMakeLists.txt
@@ -1,5 +1,7 @@
 # Generated from orogen/lib/orogen/templates/tasks/CMakeLists.txt
 
+find_package(Seasocks REQUIRED)
+
 include(controldev_websocketTaskLib)
 ADD_LIBRARY(${CONTROLDEV_WEBSOCKET_TASKLIB_NAME} SHARED
     ${CONTROLDEV_WEBSOCKET_TASKLIB_SOURCES})
@@ -9,8 +11,8 @@ add_dependencies(${CONTROLDEV_WEBSOCKET_TASKLIB_NAME}
 TARGET_LINK_LIBRARIES(${CONTROLDEV_WEBSOCKET_TASKLIB_NAME}
     ${OrocosRTT_LIBRARIES}
     ${QT_LIBRARIES}
-    ${CONTROLDEV_WEBSOCKET_TASKLIB_DEPENDENT_LIBRARIES}
-    @CMAKE_INSTALL_PREFIX@/../../../tools/seasocks/lib/libseasocks.so)
+    Seasocks::seasocks
+    ${CONTROLDEV_WEBSOCKET_TASKLIB_DEPENDENT_LIBRARIES})
 SET_TARGET_PROPERTIES(${CONTROLDEV_WEBSOCKET_TASKLIB_NAME}
     PROPERTIES LINK_INTERFACE_LIBRARIES "${CONTROLDEV_WEBSOCKET_TASKLIB_INTERFACE_LIBRARIES}")
 SET_TARGET_PROPERTIES(${CONTROLDEV_WEBSOCKET_TASKLIB_NAME}
